# crypto-key-classifier

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SIGNATURE.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: hero.html  terminal.html
docs/superpowers/plans/: 2026-07-12-crypto-key-classifier-fuzzing.md  2026-07-12-crypto-key-classifier-long-tail.md  2026-07-12-crypto-key-classifier-mnemonic.md  2026-07-12-crypto-key-classifier-mvp.md
docs/superpowers/specs/: 2026-07-12-crypto-key-classifier-design.md
src/ckc/: __init__.py  cli.py  models.py  pipeline.py  preprocessor.py  repairs.py  reporter.py
src/ckc/data/: wallets.py
src/ckc/validators/: __init__.py  algorand.py  base.py  btc.py  cardano.py  cosmos.py  evm.py  kaspa.py  mnemonic.py  monero.py  near.py  polkadot.py  ripple.py  solana.py  stellar.py  sui_aptos.py  tezos.py  ton.py  tron.py
tests/: __init__.py  conftest.py  test_argparse_help_lint.py  test_cli.py  test_e2e.py  test_fuzz_aggregate.py  test_helpers.py  test_leveshtein.py  test_long_tail_e2e.py  test_mnemonic_e2e.py  test_mnemonic_wordlist.py  test_models.py  test_pipeline.py  test_preprocessor.py  test_repairs.py  test_reporter.py
tests/fixtures/: algorand_vectors.json  btc_vectors.json  cardano_vectors.json  cosmos_vectors.json  evm_vectors.json  kaspa_vectors.json  monero_vectors.json  near_vectors.json  polkadot_vectors.json  ripple_vectors.json  solana_vectors.json  stellar_vectors.json  sui_aptos_vectors.json  tezos_vectors.json  ton_vectors.json  tron_vectors.json
tests/fuzz/: mutations.py  strategies.py  test_long_tail_fuzz.py  test_mnemonic_fuzz.py  test_mvp_fuzz.py
tests/validators/: test_algorand.py  test_btc.py  test_cardano.py  test_cosmos.py  test_evm.py  test_kaspa.py  test_mnemonic.py  test_monero.py  test_near.py  test_polkadot.py  test_ripple.py  test_solana.py  test_stellar.py  test_sui_aptos.py  test_tezos.py  test_ton.py  test_tron.py
