[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-key-classifier"
version = "0.1.0"
description = "Classify any crypto-key string (BTC/ETH/SOL/Cosmos + more) with aggressive recovery from corruption"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jordan Newell" }]
dependencies = [
    "base58>=2.1.1",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-snapshot>=0.9",
    "pyright>=1.1.350",
    "ruff>=0.6",
    "hypothesis>=6.100",
]

[project.scripts]
classify-key = "ckc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ckc.data" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
